# Citibike-Analyse

./: .gitignore  README.md  pyproject.toml
complex_route_crash_analyse/: README.MD  map_routes_crashes.py  plot_precomputed_routes.py  route_precompute_routes.py  route_precompute_settings.json
complex_route_crash_analyse/logic/: graph_builder.py
complex_route_crash_analyse/objects/: bbox.py  crash_cluster.py  enriched_crash_cluster.py
complex_route_crash_analyse/utility/: calc_length.py  generator_enriched_cluster.py  load_crashdata.py  load_precomputed_routes.py  load_ridedata.py  load_traffic_network.py
complex_route_crash_analyse/utility/logic_traffic_network/caching/: cache_entry.py  graph_cache.py  graph_cropper.py
complex_route_crash_analyse/utility/logic_traffic_network/edge_processing/: edge_ferry.py  edge_filter.py  tag_processing.py
data_analyse/citibike/: 01_time_and_usage_patterns.ipynb  02_long_distance_bikes.ipynb  03_station_and_route_hotspots.ipynb  README.MD
data_analyse/combined/: 00_small_analyse_risk.ipynb
data_analyse/nypd/: 00_data_overview.ipynb  01_time_and_severity_patterns.ipynb  02_locations_and_hotspots.ipynb  03_vehicles_and_factors.ipynb  README.MD
outputs/: precomputed_routes_500.pkl  precomputed_routes_map.html
raw_data/citi_bike/: load_data.py
